@@ -1,10 +1,9 @@
 package com.udacity.jdnd.course3.critter;
 
 
-import com.udacity.jdnd.course3.critter.pet.*;
-import com.udacity.jdnd.course3.critter.schedule.*;
-import com.udacity.jdnd.course3.critter.user.*;
-import jakarta.validation.*;
+import com.udacity.jdnd.course3.critter.controller.*;
+import com.udacity.jdnd.course3.critter.dto.*;
+import com.udacity.jdnd.course3.critter.entity.*;
 import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.*;
 import org.springframework.boot.test.context.*;
@@ -41,10 +40,10 @@ class CritterFunctionalTest {
     void testCreateCustomer() {
         CustomerDTO customerDTO = createCustomerDTO();
         CustomerDTO newCustomer = userController.saveCustomer(customerDTO);
-        CustomerDTO retrievedCustomer = userController.getAllCustomers()
-                                                      .getFirst();
-        Assertions.assertEquals(newCustomer.getName(), customerDTO.getName());
-        Assertions.assertEquals(newCustomer.getId(), retrievedCustomer.getId());
+        CustomerDTO retrievedCustomer = userController.getAllCustomers().getFirst();
+
+        assertThat(newCustomer.getName()).isEqualTo(customerDTO.getName());
+        assertThat(newCustomer.getId()).isEqualTo(retrievedCustomer.getId());
         assertThat(retrievedCustomer.getPetIds()).isInstanceOf(List.class);
     }
 
@@ -53,8 +52,11 @@ class CritterFunctionalTest {
         EmployeeDTO employeeDTO = createEmployeeDTO();
         EmployeeDTO newEmployee = userController.saveEmployee(employeeDTO);
         EmployeeDTO retrievedEmployee = userController.getEmployee(newEmployee.getId());
-        Assertions.assertEquals(employeeDTO.getSkills(), newEmployee.getSkills());
-        Assertions.assertEquals(newEmployee.getId(), retrievedEmployee.getId());
+
+        assertThat(newEmployee.getName()).isEqualTo(employeeDTO.getName());
+        assertThat(employeeDTO.getSkills()).containsExactlyElementsOf(newEmployee.getSkills());
+        assertThat(newEmployee.getDaysAvailable()).isEqualTo(employeeDTO.getDaysAvailable());
+        assertThat(newEmployee.getId()).isEqualTo(retrievedEmployee.getId());
         assertThat(retrievedEmployee.getId()).isInstanceOf(UUID.class);
     }
 
@@ -101,11 +103,9 @@ class CritterFunctionalTest {
         PetDTO newPet2 = petController.savePet(petDTO);
 
         List<PetDTO> pets = petController.getPetsByOwner(newCustomer.getId());
-        Assertions.assertEquals(pets.size(), 2);
-        Assertions.assertEquals(pets.get(0)
-                                    .getOwnerId(), newCustomer.getId());
-        Assertions.assertEquals(pets.get(0)
-                                    .getId(), newPet.getId());
+        Assertions.assertEquals(2, pets.size());
+        Assertions.assertEquals(pets.getFirst().getOwnerId(), newCustomer.getId());
+        Assertions.assertEquals(pets.getFirst().getId(), newPet.getId());
     }
 
     @Test
@@ -324,18 +324,5 @@ class CritterFunctionalTest {
         Assertions.assertEquals(sched1.getActivities(), sched2.getActivities());
         Assertions.assertEquals(sched1.getEmployeeIds(), sched2.getEmployeeIds());
         Assertions.assertEquals(sched1.getDate(), sched2.getDate());
-    }
-
-    @Autowired
-    private Validator validator;
-
-    @Test
-    void testCreateEmployeeWithoutName() {
-        EmployeeDTO employeeDTO = new EmployeeDTO();
-        employeeDTO.setSkills(Set.of(EmployeeSkill.FEEDING, EmployeeSkill.PETTING));
-
-        Set<ConstraintViolation<EmployeeDTO>> violations = validator.validate(employeeDTO);
-        assertThat(violations).isNotEmpty();
-        assertThat(violations.iterator().next().getMessage()).contains("Name is required.");
     }
 }
